facet-args/src/schema/snapshots/facet_args__schema__tests__snapshot_schema_subcommand_on_non_enum.snap
---
source: facet-args/src/schema/tests.rs
expression: stripped
---
Error: field `value` marked as subcommand must be an enum
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct SubcommandOnNonEnum {
   │        ─────────┬─────────  
   │                 ╰─────────── defined at facet-args/src/schema/tests.rs:90
   │ 
 4 │     value: String,
   │     ──────┬──────  
   │           ╰──────── field `value` marked as subcommand must be an enum
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
